# DaaS

./: .pre-commit-config.yaml  .pyre_configuration  README.md  pyproject.toml
.github/workflows/: code-check.yml  deploy.yml  test.yml
daas/: config.py  main.py  message.py
daas/api/controller/: __init__.py  eval_controller.py  judge_controller.py  reading_controller.py
daas/api/request/: eval_request.py  judge_request.py  reading_request.py
daas/api/response/: eval_response.py  judge_response.py  reading_response.py
daas/model/: dajare_model.py
daas/service/: dajare_service.py
daas/service/engine/: eval_engine.py  judge_engine.py  reading_engine.py
daas/util/: text_util.py
tests/: test_api.py  test_dajare_service.py  test_text_util.py
